--- a/views/layouts/features.gohtml
+++ b/views/layouts/features.gohtml
@@ -20,7 +20,7 @@
                         </div>
                         <div class="card-content">
                             {{template "cardTitle" "Log in quickly and securely"}}
-                            {{template "cardCopy" "You have more than enough accounts and passwords to worry about. Simply connect to your existing Spotify account and we'll take care of the rest."}}
+                            {{template "cardCopy" "You don't need another account and password to worry about. Simply connect to your Spotify account and we'll handle the rest."}}
                         </div>
                     </div>
                 </div>
@@ -40,7 +40,7 @@
                         </div>
                         <div class="card-content">
                             {{template "cardTitle" "Enjoy with no strings attached"}}
-                            {{template "cardCopy" "You won't be advertised, analyzed, or asked for a subscription. If you enjoy the experience and would like to pay it forward, share with a friend."}}
+                            {{template "cardCopy" "No advertisements, tracking, or nagging for donations. If you appreciate and want to support the website, share it with a friend."}}
                         </div>
                     </div>
                 </div>
@@ -64,7 +64,7 @@
                         </div>
                         <div class="card-content">
                             {{template "cardTitle" "Discover anytime and anywhere"}}
-                            {{template "cardCopy" "Designed from the ground up to offer a polished experience for desktop, mobile, and everything in between. Discovery is never more than a tap or click away."}}
+                            {{template "cardCopy" "Finding new music should never be a hassle. Designed for desktop and mobile, discovery is never more than a click or tap away."}}
                         </div>
                     </div>
                 </div>
@@ -84,7 +84,7 @@
                         </div>
                         <div class="card-content">
                             {{template "cardTitle" "Explore the open source code"}}
-                            {{template "cardCopy" "The complete project is hosted on GitHub for your viewing pleasure. Take a quick peek to see how we manage your data and keep discovery ticking."}}
+                            {{template "cardCopy" "The project is available on GitHub for you to browse. Take a peek to see how we manage your data and keep discovery ticking."}}
                         </div>
                     </div>
                 </div>
